# brainfrick-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: bfrs_bench.rs
samples/: 666.bf  fib11.bf  fib3.bf  helloworld.bf  long.bf  mandelbrot.bf  pi4.bf  primes.bf  sierpinski.bf
src/: compiler.rs  instruction.rs  interpreter.rs  io.rs  lib.rs  main.rs  vm.rs
