[package]
name = "brainfrick-rs"
authors = ["Rafael Bayer (@rafibayer) <rafibayer7+bfrs@gmail.com>"]
version = "0.1.0"
edition = "2021"
default-run="bfrs"

# without this, mandelbrot test takes too long
[profile.test] 
opt-level = 3

# for profiling
[profile.release-dbg]
inherits = "release"
debug = true

# to shorten binary name from "brainfrick-rs" to "bfrs"
[[bin]]
name = "bfrs"
path = "src/main.rs"

[dependencies]
argh = "0.1.9"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bfrs_bench"
harness = false